fix some bugs; add single device widget; add update interval option

--- a/AirBattery/Info.plist
+++ b/AirBattery/Info.plist
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict/>
+<dict>
+	<key>SUFeedURL</key>
+	<string>https://raw.githubusercontent.com/lihaoyun6/AirBattery/main/appcast.xml</string>
+	<key>SUPublicEDKey</key>
+	<string>dP6zY7RAyK3DtV/dDrQ2V2dB0BY36jADwMKHZIX89u4=</string>
+</dict>
 </plist>
