--- a/AirBattery/Info.plist
+++ b/AirBattery/Info.plist
@@ -2,6 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>com.lihaoyun6.AirBattery</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>airbattery</string>
+			</array>
+		</dict>
+	</array>
 	<key>SUFeedURL</key>
 	<string>https://raw.githubusercontent.com/lihaoyun6/AirBattery/main/appcast.xml</string>
 	<key>SUPublicEDKey</key>
