fix(stability): prevent automatic/sudden termination; keep lightweight activity to avoid unexpected exits

--- a/AirBattery/Info.plist
+++ b/AirBattery/Info.plist
@@ -15,6 +15,10 @@
 	</array>
 	<key>NSAppleScriptEnabled</key>
 	<true/>
+	<key>NSDisableAutomaticTermination</key>
+	<true/>
+	<key>NSSupportsSuddenTermination</key>
+	<false/>
 	<key>OSAScriptingDefinition</key>
 	<string>Scriptable</string>
 	<key>SUFeedURL</key>
